# angular-django-imc

angular-crud/: README.md  angular.json  package-lock.json  package.json
angular-crud/src/: index.html  styles.css
angular-crud/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  imc.service.spec.ts  imc.service.ts
angular-crud/src/app/home/: home.component.ts
angular-crud/src/app/imc/: imc.component.css  imc.component.html  imc.component.spec.ts  imc.component.ts
api-django-crud/: pyproject.toml
api-django-crud/src/apps/imc/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
api-django-crud/src/apps/imc/migrations/: 0001_initial.py
api-django-crud/src/config/: settings.py  urls.py
